added backend and fixed bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <div id="chatWindowDiv">
       <div id="mainChatWindow">
         
-        <div class="sentMessageDiv">
+        <!-- <div class="sentMessageDiv">
             <div class="sentMessage">
                 <p class="messageText">Hi there!</p>
             </div>
@@ -30,10 +30,10 @@
 
         <div class="receivedMessageDiv">
             <div class="receivedMessage">
-                <p class="messageText">Hi there
+                <p class="messageText">Hi there lore
                 </p>
             </div>
-        </div>
+        </div> -->
         
 
 
