--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,7 +88,7 @@ body {
 }
 
 .sentMessage {
-    min-height: 55px;    
+    /* min-height: 10px;     */
     max-width: 400px;
     background-color: rgba(60, 157, 33, 0.632);
 
@@ -99,9 +99,10 @@ body {
 
     border-radius: 10px 0px 0px 10px;
 
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+    overflow-wrap: break-word;
 }
 
 
@@ -120,9 +121,10 @@ body {
 }
 
 .receivedMessage {
-    min-height: 55px;    
+    /* min-height: 10px;     */
     max-width: 400px;
-    background-color: rgba(255, 255, 255, 0.632);
+    /* background-color: rgba(255, 255, 255, 0.632); */
+    background-color: rgb(95, 95, 95);
 
     padding-left: 30px;
     padding-right: 30px;
@@ -131,14 +133,18 @@ body {
 
     border-radius: 0px 10px 10px 0px;
 
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+
+    overflow-wrap: break-word;
 }
 
 .messageText {
     font-size: 18px;
     font-family: "Josefin Sans";
+    /* overflow-wrap: break-word; */
+    color: white;
 }
 
 #messageBoxInput {
